--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+			<id>maven-snapshots</id>
+			<!-- <url>http://10.6.33.20:8081/repository/maven-snapshots</url> -->
+		</repository>
+	</distributionManagement>
+
 </project>
