[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>tech.libra</groupId>
 	<artifactId>libra-jenkins-test-master</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -35,7 +35,7 @@
 		<connection>scm:git:git@github.com:Zakharg/libra-jenkins-test-master.git</connection>
 		<url>scm:git:git@github.com:Zakharg/libra-jenkins-test-master.git</url>
 		<developerConnection>scm:git:git@github.com:Zakharg/libra-jenkins-test-master.git</developerConnection>
-		<tag>libra-jenkins-test-master-1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<profiles>
