--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +12,7 @@
 
 	<groupId>tech.libra</groupId>
 	<artifactId>libra-jenkins-test-master</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<packaging>pom</packaging>
 
@@ -37,7 +35,7 @@
 		<connection>scm:git:git@github.com:Zakharg/libra-jenkins-test-master.git</connection>
 		<url>scm:git:git@github.com:Zakharg/libra-jenkins-test-master.git</url>
 		<developerConnection>scm:git:git@github.com:Zakharg/libra-jenkins-test-master.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>libra-jenkins-test-master-1.0</tag>
 	</scm>
 
 	<profiles>
